--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.24.7",
     "@babel/node": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "axios": "1.9.0",
     "babel-register": "6.22.0",
     "bcryptjs": "3.0.2",
     "body-parser": "2.2.0",
